small title update

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <section style="padding: 4rem 0" class="bg-light">
       <div id="industries" class="mx-auto text-center">
-        <h1>Rules Score per Vertical</h1>
+        <h1>Platform Score per Vertical</h1>
       </div>
       <div class="container">
         <canvas id="myChart" style="width:100%"></canvas>
