small title update

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <a data-toggle="collapse" href="#collapseScore" role="button" aria-expanded="false" aria-controls="collapseRules">Explanation</a>
         <div class="collapse" id="collapseScore">
           <div class="card card-body">
-            <p><i>Please note that in most of the cases Rules Engine are complemented by other tools and applications in order to create end to end solutions. This score indicates how much of work on business automation (rules) is required before customers can build the end solution on top (mobile app, customer facing app etc.). Every score less than 50-60% indicates that additional tools and applications will be required to close the automation gap first.</i></p>
+            <p><i>Please note that in most of the cases middleware platforms are complemented by other tools and applications in order to create end to end solutions. This score indicates how much of work on business automation (rules) is required before customers can build the end solution on top (mobile app, customer facing app etc.). Every score less than 50-60% indicates that additional tools and applications will be required to close the automation gap first.</i></p>
             <a data-toggle="collapse" href="#collapseScore" role="button" aria-expanded="false" aria-controls="collapseRules">Close</a>
           </div>
         </div>
