added some intro

--- a/index.html
+++ b/index.html
@@ -60,16 +60,42 @@
       <div class="row" >
         <div class="col-lg-8 mx-auto">
           <h2 class="text-white mb-4">About Platform Benchmark</h2>
-          <p class="text-white">Back in the day, discussing middleware was a simple conversation, because we all assumed that the middleware was a database. Benchmarking databases was also a rather obvious task: metrics were related to IO performances, query speed, data storage size, backups, rollbacks etc. In today's world, bringing conversation about cloud/edge middeleware is not that trivial, as set of tools and even the feature set depends on many variables.</p><p class="text-white">For this benchark exercise, we focused on a set of features that are typically required for a given vertical, and then looked back at which middleware suite can bring us as close as possible to the final goal - getting the solution out.</p>
-          <p class="text-white">
-          Please note that in most of the cases middleware platforms are complemented by other tools and applications in order to create end to end solutions. This score indicates how much work on business automation (rules) is required before customers can build the end solution on top (mobile app, customer facing app etc.). Every score less than 50-60% indicates that additional tools and applications will be required to close the automation gap first.</p>
+          <p class="text-white">Back in the day, discussing middleware was a simple conversation, because we all assumed that the middleware was a database. Benchmarking databases was also a rather obvious task: metrics were related to IO performances, query speed, data storage size, backups, rollbacks etc. In today's world, bringing conversation about cloud/edge middeleware is not that trivial, as set of tools and even the feature set depends on many variables.
         </div>
 
       </div>
     </section>
 
-    <section style="padding: 4rem 0" class="bg-light">
-      <div id="industries" class="mx-auto text-center">
+     <section id="introduction" class="bg-light">
+      <div class="row" >
+        <div class="col-lg-8 mx-auto">
+          <br>
+          <h1 >Platform Middlware Capabilities</h1>
+          <p>For this benchark exercise, we focused on a set of features that are typically required for a given vertical, and then looked back at which middleware suite can bring us as close as possible to the final goal - getting the solution out.</p>
+          <ul>
+            <li>Rules Engine (how easy is to express the business logic)</li>
+            <li>Time Series Analysis (database and analytics on top)</li>
+            <li>Event Processing (events such as <i>motion, door open/close </i> etc.)</li>
+            <li>Stream Processing (capability to respond to streams as a data source)</li>
+            <li>Machine Learning / AI capabilities</li>
+            <li>Data Visualization</li>
+            <li>APIs & serverless</li>
+            <li>Zero-touch-automation (configure logic once, run always)</li>
+            <li>Scalability</li>
+            <li>Explainability (is it clear what is going on once the platform is in operations?)</li>
+            <li>Integration Simplicity (how easy is to setup the tool chain, how easy is to create an application on top?)</li>
+            <li>Data Ingestion (different protocols, payloads formats etc.)</li>
+            <li>LPWAN support (Sigfox, LoRa, NBIoT)</li>
+            <li>Device Management (firmware, identity, security etc.)</li>
+            <li>Edge Ready (can exactly the same tooling be use at the edge)</li>
+          </ul>
+          <p><i>Please note that middleware platforms are always complemented by other tools and applications in order to create end to end solutions.</i></p>
+        </div>
+      </div>
+    </section>
+
+    <section style="padding: 4rem 0"  class="bg-light">
+      <div id="industries" class="col-lg-8 mx-auto">
         <h1>Platform Requirements per Vertical</h1>
       </div>
       <br>
@@ -80,7 +106,7 @@
     </section>
 
     <section style="padding: 4rem 0" class="bg-light">
-      <div id="results" class="mx-auto text-center">
+      <div id="results" class="col-lg-8 mx-auto">
         <h1>Platform Benchmark Results</h1>
       </div>
       <br>
@@ -91,7 +117,7 @@
     </section>
 
     <section style="padding: 4rem 0" class="bg-light">
-      <div id="industries" class="mx-auto text-center">
+      <div id="industries" class="col-lg-8 mx-auto">
         <h1>Platform Score per Vertical</h1>
       </div>
       <div class="container">
