--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </div> 
         <div>
           <h3>Why did you skip a middleware competitor X?</h3>
-          <p>We skip them all, except the big two. We are not able to follow every competitor closely enough and therefore we would be getting at risk of under or over reporting each of them. Exceptions are AWS and Azure, where we follow very closely what they do, as in most of the cases, the customer choices are: AWS or Azure, "do it myself", or vendor X/Y/Z.</p> 
+          <p>We skip them all, except the big two. We are not able to follow every competitor closely enough and therefore we would be getting at risk of under or over reporting each of them. Exceptions are AWS and Azure, where we follow very closely what they do, as in most of the cases, the customer choices are: AWS or Azure, "do it myself", or vendor X/Y/Z. We moslty find ourselves facing the first (big two) or second (do it myself) as a competitor.</p> 
         </div> 
         <div>
           <h3>How are you sure that you got a metric for that competitor right?</h3>
@@ -205,9 +205,15 @@
         <div>
           <h3>Didn't you also use similar components to build Waylay?</h3>
           <p>Yes indeed! But we do it for living (and for a long time) and around our own patented automation technology, which brings all these things together in the most comprehensive possible way.</p> 
+        </div> 
+         <div>
+          <h3>Why didn't Waylay invest more in Device Management?</h3>
+          <p>In our view, that battle is already won. We see a few things: either Azure/AWS IoT, or sometimes players like Cumulocity or people doing all sorts things with OPC/UA or MQTT bridges - custom made. Waylay also provide MQTT broker and device identity mgmt., and some customers are using it, but we stop short of building firmware, this is not our thing. Having said that, we invest heavily in <a href="https://docs.waylay.io/#/features/data_ingestion/">Data Ingestion Layer</a>, which enables us to consume data directly from all IoT platforms out there. In that sense, we can 'waylay' other platforms and seamlessly get data and digital twin information into our system and the rest of magic happens Waylay side.</p> 
         </div>     
       </div>
     </section>
+
+
 
 
 
